--- a/app/views/admin/branches/index.html.erb
+++ b/app/views/admin/branches/index.html.erb
@@ -18,7 +18,7 @@
         <td><%= branch.location %></td>
         <td>
           <%= link_to "Edit", edit_admin_branch_path(branch), class: "btn btn-sm btn-warning" %>
-          <%= link_to "Hapus", admin_branch_path(branch), method: :delete, data: { confirm: "Anda yakin?" }, class: "btn btn-sm btn-danger" %>
+          <%= link_to "Lihat Jadwal", timetable_admin_branch_path(branch), class: "btn btn-primary btn-sm" %>
         </td>
       </tr>
     <% end %>
