--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,7 +87,7 @@
             <%= link_to "Semua Jadwal", all_staff_bookings_path, class: "nav-link" %>
           </li>
           <li class="nav-item mb-2">
-            <%= link_to "Tambah Booking", new_staff_booking_path, class: "nav-link" %>
+            <%= link_to "Tambah Booking", new_cs_staff_bookings_path, class: "nav-link" %>
           </li>
           <li class="nav-item mb-2">
             <%= link_to "Time Table 7 Hari", timetable_staff_bookings_path, class: "nav-link" %>
