--- a/app/views/staff/bookings/new_cs.html.erb
+++ b/app/views/staff/bookings/new_cs.html.erb
@@ -1,4 +1,4 @@
-<h1>Booking (Customer Service)</h1>
+<h1>Booking Langsung Staff Cabang</h1>
 
 <!-- Form Filter: Hanya untuk memilih Cabang & Tanggal -->
 <%= form_with url: new_cs_staff_bookings_path, method: :get, local: true do %>
