--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   
 </head>
 <body>
+  <%= render 'shared/pending_notifications' if current_user && current_user.staff_cabang? %>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-orange">
     <div class="container-fluid">
