--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,47 +7,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-  
 </head>
 <body>
   <%= render 'shared/pending_notifications' if current_user && current_user.staff_cabang? %>
+  
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-orange">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">Orange Dental Booking</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-        <span class="navbar-toggler-icon"></span>
+      <!-- Tombol toggle offcanvas untuk mobile -->
+      <button class="btn btn-outline-light d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
+        <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <% if user_signed_in? %>
-        <ul class="navbar-nav">
-          <li class="nav-item me-2">
-            <span class="navbar-text text-white">Halo, <%= current_user.name %></span>
-          </li>
-          <li class="nav-item">
-            <%= button_to "Logout", destroy_user_session_path, method: :delete, data: { confirm: "Anda yakin ingin logout?" }, class: "btn btn-outline-danger" %>
-          </li>
-        </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item me-2">
+              <span class="navbar-text text-white">Halo, <%= current_user.name %></span>
+            </li>
+            <li class="nav-item">
+              <%= button_to "Logout", destroy_user_session_path, method: :delete, data: { confirm: "Anda yakin ingin logout?" }, class: "btn btn-outline-danger" %>
+            </li>
+          </ul>
         <% else %>
-        <%= link_to "Login", new_user_session_path, class: "nav-link text-white" %>
+          <%= link_to "Login", new_user_session_path, class: "nav-link text-white" %>
         <% end %>
       </div>
     </div>
   </nav>
   
-  <!-- Kontainer utama -->
-  <div class="container-fluid min-vh-100">
-    <div class="row min-vh-100">
-      <!-- Sidebar -->
-      <aside class="col-md-2 sidebar d-flex flex-column p-3">
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2">
-            <%= link_to "Dashboard", root_path, class: "nav-link" %>
-          </li>
-          <% if current_user&.admin? %>
+  <!-- Offcanvas Sidebar untuk Mobile -->
+  <div class="offcanvas offcanvas-start d-lg-none" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasSidebarLabel">Menu</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2">
+          <%= link_to "Dashboard", root_path, class: "nav-link" %>
+        </li>
+        <% if current_user&.admin? %>
           <li class="nav-item mb-2">
             <%= link_to "Management Cabang", admin_branches_path, class: "nav-link" %>
           </li>
@@ -60,12 +63,11 @@
           <li class="nav-item mb-2">
             <%= link_to "Management Booking", admin_bookings_path, class: "nav-link" %>
           </li>
-          <!-- Menu Management User dengan submenu collapse -->
           <li class="nav-item mb-2">
-            <a class="nav-link" data-bs-toggle="collapse" href="#managementUserCollapse" role="button" aria-expanded="false" aria-controls="managementUserCollapse">
+            <a class="nav-link" data-bs-toggle="collapse" href="#managementUserCollapseMobile" role="button" aria-expanded="false" aria-controls="managementUserCollapseMobile">
               Management User
             </a>
-            <div class="collapse" id="managementUserCollapse">
+            <div class="collapse" id="managementUserCollapseMobile">
               <ul class="nav flex-column ms-3">
                 <li class="nav-item mb-1">
                   <%= link_to "Customer Service", customer_services_admin_users_path, class: "nav-link" %>
@@ -76,14 +78,14 @@
               </ul>
             </div>
           </li>
-          <% elsif current_user&.customer_service? %>
+        <% elsif current_user&.customer_service? %>
           <li class="nav-item mb-2">
             <%= link_to "Tambah Booking", new_cs_bookings_path, class: "nav-link" %>
           </li>
           <li class="nav-item mb-2">
             <%= link_to "Booking Hari Ini", bookings_path, class: "nav-link" %>
           </li>
-          <% elsif current_user&.staff_cabang? %>
+        <% elsif current_user&.staff_cabang? %>
           <li class="nav-item mb-2">
             <%= link_to "Jadwal Hari Ini", today_staff_bookings_path, class: "nav-link" %>
           </li>
@@ -96,20 +98,78 @@
           <li class="nav-item mb-2">
             <%= link_to "Time Table 7 Hari", timetable_staff_bookings_path, class: "nav-link" %>
           </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+  
+  <!-- Sidebar untuk Desktop -->
+  <div class="container-fluid">
+    <div class="row min-vh-100">
+      <aside class="col-lg-2 d-none d-lg-block bg-light sidebar p-3">
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2">
+            <%= link_to "Dashboard", root_path, class: "nav-link" %>
+          </li>
+          <% if current_user&.admin? %>
+            <li class="nav-item mb-2">
+              <%= link_to "Management Cabang", admin_branches_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item mb-2">
+              <%= link_to "Management Dokter", admin_doctors_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item mb-2">
+              <%= link_to "Management Jadwal", admin_schedules_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item mb-2">
+              <%= link_to "Management Booking", admin_bookings_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item mb-2">
+              <a class="nav-link" data-bs-toggle="collapse" href="#managementUserCollapseDesktop" role="button" aria-expanded="false" aria-controls="managementUserCollapseDesktop">
+                Management User
+              </a>
+              <div class="collapse" id="managementUserCollapseDesktop">
+                <ul class="nav flex-column ms-3">
+                  <li class="nav-item mb-1">
+                    <%= link_to "Customer Service", customer_services_admin_users_path, class: "nav-link" %>
+                  </li>
+                  <li class="nav-item mb-1">
+                    <%= link_to "Staff Cabang", staffs_admin_users_path, class: "nav-link" %>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          <% elsif current_user&.customer_service? %>
+            <li class="nav-item mb-2">
+              <%= link_to "Tambah Booking", new_cs_bookings_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item mb-2">
+              <%= link_to "Booking Hari Ini", bookings_path, class: "nav-link" %>
+            </li>
+          <% elsif current_user&.staff_cabang? %>
+            <li class="nav-item mb-2">
+              <%= link_to "Jadwal Hari Ini", today_staff_bookings_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item mb-2">
+              <%= link_to "Semua Jadwal", all_staff_bookings_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item mb-2">
+              <%= link_to "Tambah Booking", new_cs_staff_bookings_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item mb-2">
+              <%= link_to "Time Table 7 Hari", timetable_staff_bookings_path, class: "nav-link" %>
+            </li>
           <% end %>
         </ul>
-        <div class="mt-auto">
-          <!-- Opsional: Area untuk info tambahan atau link footer -->
-        </div>
       </aside>
       
       <!-- Main Content -->
-      <main class="col-md-10 p-4">
+      <main class="col-lg-10 col-md-12 p-4">
         <% if notice %>
-        <div class="alert alert-success"><%= notice %></div>
+          <div class="alert alert-success"><%= notice %></div>
         <% end %>
         <% if alert %>
-        <div class="alert alert-danger"><%= alert %></div>
+          <div class="alert alert-danger"><%= alert %></div>
         <% end %>
         <%= yield %>
       </main>
