--- a/app/views/admin/branches/_form.html.erb
+++ b/app/views/admin/branches/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [:admin, branch], local: true) do |form| %>
+<%= form_with(model: branch, local: true) do |f| %>
   <% if branch.errors.any? %>
     <div class="alert alert-danger">
       <h4><%= pluralize(branch.errors.count, "error") %> terjadi:</h4>
@@ -11,16 +11,16 @@
   <% end %>
 
   <div class="mb-3">
-    <%= form.label :name, "Nama Cabang", class: "form-label" %>
-    <%= form.text_field :name, class: "form-control" %>
+    <%= f.label :name, "Nama Cabang", class: "form-label" %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
 
   <div class="mb-3">
-    <%= form.label :location, "Lokasi", class: "form-label" %>
-    <%= form.text_field :location, class: "form-control" %>
+    <%= f.label :phone, "Nomor WA", class: "form-label" %>
+    <%= f.text_field :phone, class: "form-control", placeholder: "62xxxxxxxxxx" %>
   </div>
 
-  <div class="mb-3">
-    <%= form.submit "Simpan Cabang", class: "btn btn-primary" %>
+  <div class="d-grid">
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
