keterangan di booking cabang

--- a/app/views/staff/bookings/new_cs.html.erb
+++ b/app/views/staff/bookings/new_cs.html.erb
@@ -66,6 +66,12 @@
       <%= f.text_field :customer_phone, class: "form-control" %>
     </div>
 
+    <!-- Field baru untuk keterangan -->
+    <div class="mb-3">
+      <%= f.label :keterangan, "Keterangan", class: "form-label" %>
+      <%= f.text_field :keterangan, class: "form-control" %>
+    </div>
+
     <div class="d-grid">
       <%= f.submit "Buat Booking", class: "btn btn-success" %>
     </div>
