--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,6 +64,11 @@
             <%= link_to "Management Booking", admin_bookings_path, class: "nav-link" %>
           </li>
           <li class="nav-item mb-2">
+            <%= link_to "Analisa Booking", admin_analytics_bookings, class: "nav-link" %>
+          </li>
+
+          
+          <li class="nav-item mb-2">
             <a class="nav-link" data-bs-toggle="collapse" href="#managementUserCollapseMobile" role="button" aria-expanded="false" aria-controls="managementUserCollapseMobile">
               Management User
             </a>
