no duplicate booking

--- a/app/views/staff/bookings/new_cs.html.erb
+++ b/app/views/staff/bookings/new_cs.html.erb
@@ -73,7 +73,7 @@
     </div>
 
     <div class="d-grid">
-      <%= f.submit "Buat Booking", class: "btn btn-success" %>
+      <%= f.submit "Buat Booking", class: "btn btn-success", data: { disable_with: "Memproses..." } %>
     </div>
   <% end %>
 <% end %>
