--- a/app/views/admin/analytics/bookings.html.erb
+++ b/app/views/admin/analytics/bookings.html.erb
@@ -20,6 +20,13 @@
       <%= label_tag :branch_id, "Cabang" %>
       <%= select_tag :branch_id, options_from_collection_for_select(@branches, :id, :name, @branch_id), prompt: "Semua Cabang", class: "form-select" %>
     </div>
+    <div class="col-md-3">
+      <%= label_tag :tipe_booking, "Tipe Booking" %>
+      <%= select_tag :tipe_booking, 
+            options_for_select(Booking.tipe_bookings.keys.map { |key| [key.humanize, key] }, params[:tipe_booking]), 
+            prompt: "Semua Tipe Booking", 
+            class: "form-select" %>
+    </div>
     <div class="col-md-3 d-flex align-items-end">
       <%= submit_tag "Filter", class: "btn btn-primary" %>
     </div>
